--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <button onClick="window.location.reload();">Create new</button>
-        <p><a href="https://en.wikipedia.org/wiki/Asemic_writing">Asemic Writing</a> | <a href="https://en.wikipedia.org/wiki/Cy_Twombly">Cy Twombly</a></p>
+        <p><a href="https://en.wikipedia.org/wiki/Asemic_writing" target="blank">Asemic Writing</a> | <a href="https://en.wikipedia.org/wiki/Cy_Twombly" target="blank">Cy Twombly</a></p>
     </body>
 </html>
