--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <script src="./lib/p5.min.js"></script>
-        <script src="sketch2.js" async defer></script>
+        <script src="sketch.js" async defer></script>
     </head>
     <body>
         <button onClick="window.location.reload();">Create new</button>
